--- a/site/stock.html
+++ b/site/stock.html
@@ -10,12 +10,17 @@
   <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="stock.css">
+  <script src="auth.js"></script>
 
 </head>
 <body>
   <header>
     <h1>TapiStock - Gestion du Stock</h1>
-    <a href="index.html" class="back-btn">Retour à la caisse</a>
+    <div class="header-controls">
+      <span class="user-info">Connecté: <span id="currentUser"></span></span>
+      <a href="index.html" class="back-btn">Retour à la caisse</a>
+      <button id="logoutBtn" class="logout-btn">Déconnexion</button>
+    </div>
   </header>
   
   <div class="stock-main">
