--- a/site/main/index.html
+++ b/site/main/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" href="/media/favicon.ico" type="image/x-icon">
   <!-- Minimal CSS -->
   <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
-  <link rel="stylesheet" href="style.css">
-  <script src="auth.js"></script>
+  <link rel="stylesheet" href="/main/style.css">
+  <script src="/login/auth.js"></script>
 
 </head>
 <body>
@@ -53,6 +53,6 @@
     </aside>
   </main>
 
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="/main/script.js"></script>
 </body>
 </html>
