--- a/site/login/login.html
+++ b/site/login/login.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="/media/favicon.ico" type="image/x-icon">
   <!-- Minimal CSS -->
   <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="/login/login.css">
 </head>
 <body>
   <main class="container">
@@ -44,6 +44,6 @@
     </div>
   </main>
   
-  <script src="login.js"></script>
+  <script src="/login/login.js"></script>
 </body>
 </html>
